--- a/hls.html
+++ b/hls.html
@@ -56,7 +56,7 @@
 
     </div>
     <div id="video-container">
-        <video id="video" controls autoplay></video>
+        <video id="video" controls autoplay referrerpolicy="no-referrer"></video>
     <input type="text" id="url-input" placeholder="Enter HLS Video URL...">
     <button id="play-button" onclick="playVideo()">PLAY</button>
     <button id="clearButton" onclick="document.getElementById('url-input').value = ''">✖️</button>
