--- a/m3u8.html
+++ b/m3u8.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <title>M3U8 To TS</title>
-<script src="CSS-JS/aes-decryptor1.js"></script>
-<script src="CSS-JS/mux-mp41.js"></script>
-<script type="module" src="CSS-JS/index-BitNB0oc1.js"></script>
-<link rel="stylesheet" href="CSS-JS/index-Bmb2mHDm1.css">
+<script src="M3U8-CSS-JS/aes-decryptor.js"></script>
+<script src="M3U8-CSS-JS/mux-mp4.js"></script>
+<script type="module" src="M3U8-CSS-JS/script.js"></script>
+<link rel="stylesheet" href="M3U8-CSS-JS/style.css">
 </head>
 <body>
 <div id="app" data-v-app="">
