--- a/m3u8.html
+++ b/m3u8.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="M3U8-CSS-JS/style.css" />
   </head>
   <body>
-    <div id="app" data-v-app="">
+    <div id="pageContent" data-v-app="">
       <div class="flex flex-col pb-20">
         <header
           class="sticky z-40 top-0 bg-background/80 backdrop-blur-lg border-b border-border"
