--- a/M3U8/m3u8.html
+++ b/M3U8/m3u8.html
@@ -6,8 +6,8 @@
     <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo22.png">
     <title>M3U8 To MP4</title>
     <!--  <script src="M3U8-CSS-JS/aes-decryptor.js"></script>  -->
-    <script src="/CSS-JS/mux-mp4.js"></script>
-    <script type="module" src="/CSS-JS/script.js"></script>
+    <script src="CSS-JS/mux-mp4.js"></script>
+    <script type="module" src="CSS-JS/script.js"></script>
     <link rel="stylesheet" href="CSS-JS/style.css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
         
 <script>
 if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('M3U8/CSS-JS/serviceWorker.js');
+    navigator.serviceWorker.register('CSS-JS/serviceWorker.js');
 }   
 </script>
 </body>
