--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
   <meta charset="utf-8">
   <title>Nihar's Websites</title>
 </head>
@@ -38,7 +39,7 @@
     <h2>WEBPAGE LINKS</h2>
     <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
     <p><a href="hls">HLS Player For PC</a></p>
-    <p><a href="m3u8">M3U8 To MP4</a></p>
+    <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
     <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
