--- a/cn.html
+++ b/cn.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" sizes="192x192" href="https://1nrp.github.io/1/Images/N-Logo1.png">
   <meta charset="utf-8">
   <meta name="theme-color" content="#02121b">
   <title>Cloud Notes</title>
@@ -175,7 +175,7 @@ const Redis_Key = document.getElementById('Stores').value;
 const fireDB = doc(db, "Notes_Collection", `${Redis_Key}`);
 const AlertText = document.getElementById('Header').innerText;
 const lines = document.getElementById('textBox').value.trim().split('\n\n\n\n');
-const date  = `[ Date: ${new Date().getDate()}-${new Date().getMonth() + 1}-${new Date().getFullYear()} ]`;  // Month is zero-indexed, so add 1. 
+const date = `● Date: ${new Date().toLocaleDateString('en-IN')} ●`;
 const saveSentence = date + "\n" + lines[lines.length - 1].trim();
 
 // SaveNote.
