--- a/cn.html
+++ b/cn.html
@@ -144,13 +144,13 @@ h2 {
         <option value="Quotes" data-Name="Quotes" data-Colour="#1d423a">Quotes</option>
     </select>
 </div>
-    <div id="pop-up">
-      <button id="login" style="background-color: #2072b1; padding: 6px;" onclick="login()">LOG IN</button>
-      <button id="logout" style="background-color: #c02020; padding: 6px;" onclick="logout()">LOG OUT"></button>
+    <div id="pop-up" style="display: none;">
+      <button id="login" style="background-color: #2072b1; padding: 6px; border: 2px dashed #3c3f3d; border-radius: 6px;" onclick="login()">LOG IN</button>
+      <button id="logout" style="background-color: #c02020; padding: 6px; border: 2px dashed #3c3f3d; border-radius: 6px;" onclick="logout()">LOG OUT</button>
     </div>
     <textarea id="textBox" spellcheck="false" autocomplete="off" translate="no"></textarea> 
     <button id="deleteButton" onclick="deleteNote()">DELETE</button>
-    <button id="clearButton" onclick="document.getElementById('textBox').value=''">✖</button>
+    <button id="clearButton" onclick="document.getElementById('textBox').value=''" ondblclick="document.getElementById('pop-up').style.display = (document.getElementById('pop-up').style.display === 'none' ? 'block' : 'none');">✖</button>
     <button id="saveButton" onclick="saveNotes()">SAVE</button>
     <button id="getButton" onclick="getNote()">VIEW</button>
     <textarea id="deleteBox" spellcheck="false" autocomplete="off" translate="no"></textarea>
@@ -198,14 +198,9 @@ function login() {
 }
 }
 
-// Show Login/Logout Pop-up.
-function showLogin() {
-
-}
 // Logout.
 function logout() {
   const auth = getAuth();
-  document.getElementById('Header').style.color = '#fff';
   signOut(auth).then(() => {
     showAlert({ BgColor: 'f2074e', Text: '✖ Logged Out'});
   }).catch((error) => {
