--- a/cn.html
+++ b/cn.html
@@ -121,51 +121,67 @@ h2 {
     animation-name: Alert;
     animation-duration: 1s;
 }
-
-.form-container { 
+#form-container { 
   position: absolute;
-  top: 10dvh;
-  top: 20vh; left: 10vw ;
-  background-color: white; 
-  padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  border-radius: 8px; width: 300px; } 
-.form-container h2 { text-align: center; margin-bottom: 20px; } 
-.form-container label { display: block; margin-bottom: 8px; } 
-.form-container input { 
-  width: 90%; 
-  padding: 10px; margin-bottom: 10px; 
-  border: 1px solid #ddd; border-radius: 4px; } 
-.form-container button { 
-  width: 95%; padding: 10px; 
-  background-color: #4CAF50; color: white; 
-  border: none; border-radius: 4px; 
-  cursor: pointer; } 
-.form-container button:hover { background-color: #294e2b; }
-
- /* Alert Animation */
+  top: 40vh;
+  left: 10vw;
+  display: none;
+  background-color: #456b; 
+  padding: 20px;
+  border-radius: 8px;
+  width: 70vw;
+  animation-name: Login;
+  animation-duration: 1s;
+  }    
+#form-container input { outline: 0 }
+#form-container h2 { 
+  text-align: center;
+  color: #d88;
+  margin: -15px 0px 10px 0px;
+}
+a4 { color: #d88; font-weight: 600 }
+#userId, #password {
+  width: 100%; 
+  padding: 10px;
+  background-color: #222; 
+  margin-bottom: 10px; 
+  border: 2px dashed #888; 
+  border-radius: 6px;
+}
+::placeholder { font-weight: 600 }
+#form-container button { 
+  width: 100%; 
+  padding: 10px;
+  border: 2px solid #888;
+  font-weight: 600;
+  background-color: #4CAF50; 
+  color: #bbb; 
+  border-radius: 4px; 
+}
+#form-container button:hover { 
+  background-color: #4caf50bb; }
+/* Animations */
 @keyframes Alert {
     from {font-size: 10px; top: 5dvh}
     to {font-size: 25px; top: 10dvh}
 }
+@keyframes Login { from {top: 10vh} to {top: 40vh} }
 </style>
+
 <body>
 <!--  * Keyboard Shortcuts: Fetch Notes: "ArrowRight + ArrowDown", Save Notes: "ArrowRight + ArrowUp", Delete Notes: "ArrowRight + End"  -->
 <div id="TopBar">
     <h2 id="Header">Nihar's Cloud Notes</h2>
-    <div id='loginStatus' style="padding:1px;height:20px;width:20px; position: absolute; border-radius:50px;margin:-1vw 0px 0px 60vw"></div>"
-    
-  <div class="form-container">
-    <h2>Login</h2> 
-    <form id="loginForm"> 
-        <input type="text" placeholder="Enter Email" id="userId" required> 
-        <input type="password" placeholder="Enter Password" id="password" required> 
-        <button type="submit">Submit</button>
-      <br>
-      <br>
-      <label for="check">Is It A Trusted Device</label>
-      <input type="checkbox" name="check" id="device-type" value="Trusted Device"></input>
-  </form> 
-</div>
+    <div id='loginStatus' style="padding:1px;height:20px;width:20px; background-color: #d00; position: absolute; border-radius:50px;margin:-1vw 0px 0px 60vw"></div>
+    <div id="form-container">
+        <h2>Login</h2> 
+        <form id="loginForm"> 
+          <input type="text" placeholder="Enter Email" id="userId" required> 
+          <input type="password" placeholder="Enter Password" id="password" required> 
+          <button type="submit">SUBMIT</button>
+          <br><a4>Enable Offline Support ?</a4><input type="checkbox" style="margin: 15px 5px -200px 5px; border:2px solid #888" name="check" id="device-type">
+        </form>
+     </div>
 
     <select id="Stores">
         <option value="Miscellaneous" data-Name="Nihar's Cloud Notes" data-Colour="#111136">Miscellaneous</option>
@@ -180,10 +196,7 @@ h2 {
         <option value="Quotes" data-Name="Quotes" data-Colour="#1d423a">Quotes</option>
     </select>
 </div>
-    <div id="pop-up" style="display: none;">
-      <button id="login" style="background-color: #2072b1; padding: 6px; border: 2px dashed #3c3f3d; border-radius: 6px;" onclick="login()">LOG IN</button>
-      <button id="logout" style="background-color: #c02020; padding: 6px; border: 2px dashed #3c3f3d; border-radius: 6px;" onclick="logout()">LOG OUT</button>
-    </div>
+    <button id="logout" style="background-color: #d00; position: absolute; top: 40vh; left: 40vw; font-weight: 600; padding: 6px; display: none; border: 2px dashed #3c3f3d; border-radius: 6px;" onclick="logout()">LOG OUT</button>
     <textarea id="textBox" spellcheck="false" autocomplete="off" translate="no"></textarea> 
     <button id="deleteButton" onclick="deleteNote()">DELETE</button>
     <button id="clearButton" onclick="document.getElementById('textBox').value=''" ondblclick="document.getElementById('pop-up').style.display = (document.getElementById('pop-up').style.display === 'none' ? 'block' : 'none');">✖</button>
@@ -197,7 +210,6 @@ document.getElementById('saveButton').onclick = saveNote;
 document.getElementById('getButton').onclick = getNotes;
 document.getElementById('deleteButton').onclick = deleteNote;
 document.getElementById('textBox').onclick = pasteLineText;
-document.getElementById('login').onclick = login;
 document.getElementById('logout').onclick = logout;
 
 // Import necessary functions from Firebase SDKs.
@@ -209,24 +221,23 @@ const firebaseConfig = { apiKey: "AIzaSyAwh2IXpNUCL2JHuTLKfc8FZDDd62g4j74", auth
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-
 // Login form.
 function showLogin() {
   if (loggedIn === false) {
     const form = document.getElementById('loginForm');
     form.style.display = 'block';
-    form.addEventListener('submit', function(event) { 
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
       const userId = document.getElementById('userId').value; 
       const userPassword = document.getElementById('password').value;
       let offlineSupport;
       if (document.getElementById('device-type').checked) {
          offlineSupport = true; 
       }
-        login(userId, userPassword, offlineSupport); 
-        alert('Submission canceled!');
+      login(userId, userPassword, offlineSupport);
       });
   } else {
-    alert('Already Logged In!');
+    document.getElementById('logout').style.display = (document.getElementById('logout').style.display === 'none' ? 'block' : 'none');
   }
 }
 
